[package]
name = "x86_uintr"
version = "0.1.0"
edition = "2024"
authors = ["Yuyang You <youyuyang@live.com>"]

[dependencies]
x86 = "0.52"
bitflags = "2.9"
tock-registers = "0.9"
xsave = "2.0"
atomic = "0.6"
cfg-if = "1.0"
bytemuck = "1.22"

[features]
handler = []
fp_simd = ["handler"]
default = []
